# blogger-clone

backend/: .gitignore  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0f08efccb909_serial_number_added.py  3a757d3c0b5a_user_made_active_by_default.py  4e245daf4f17_init.py  534dec11aea6_id_date_and_time_added_to_blog.py  54322f956efc_hero_card_model_added.py
backend/app/api/: main.py  models.py
backend/app/api/v1/: deps.py
backend/app/api/v1/internal/: admin.py
backend/app/api/v1/routers/: auth.py  blogs.py  hero_cards.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  main.jsx
frontend/src/Layouts/: Layout.jsx
frontend/src/api/: api.js
frontend/src/components/BlogCreation/: BlogCreation.jsx
frontend/src/components/Footer/: Footer.jsx
frontend/src/components/HeroCarousel/: HeroCarousel.css  HeroCarousel.jsx
frontend/src/components/HeroSection/: HeroSection.jsx
frontend/src/components/Home/: Home.jsx
frontend/src/components/LandingPage/: LandingPage.jsx
frontend/src/components/Login/: Login.jsx
frontend/src/components/Navbar/: Navbar.jsx
frontend/src/components/NotFound/: NotFound.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/routes/: AdminRoute.jsx  ProtectedRoute.jsx  PublicRoute.jsx
